#453 Limit row gap fix to oe-container (#455)

--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -219,11 +219,6 @@ body {
   flex: 1;
 }
 
-.vl-action-group {
-  row-gap: unset;
-  gap: unset;
-}
-
 /**
 -------------------------------
  End override specific styles
